tests/baselines/reference/incorrectClassOverloadChain.errors.txt
incorrectClassOverloadChain.ts(3,5): error TS2391: Function implementation is missing or not immediately following the declaration.


==== incorrectClassOverloadChain.ts (1 errors) ====
    class C {
        foo(): string;
        foo(x): number;
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
        x = 1;
    }